tests/baselines/reference/undefinedTypeArgument2.errors.txt
tests/cases/compiler/undefinedTypeArgument2.ts(4,92): error TS2304: Cannot find name 'R'.
tests/cases/compiler/undefinedTypeArgument2.ts(4,102): error TS2304: Cannot find name 'R'.


==== tests/cases/compiler/undefinedTypeArgument2.ts (2 errors) ====
    // once caused stack overflow
    interface Query<T> {
        selectMany<U>(selector: (item: T) => U[]): Query<U>;
        selectMany<U>(arraySelector: (item: T) => U[], resultSelector: (outer: T, inner: U) => R): Query<R>;
                                                                                               ~
!!! error TS2304: Cannot find name 'R'.
                                                                                                         ~
!!! error TS2304: Cannot find name 'R'.
    }